@@ -1,6 +1,7 @@
+AUX manifest 489 RMD160 2fcb48771db34df7c90d95125b1ea592cce6f8e8 SHA1 86fa3530c6c89cfbbbbe1e8bd5a979c59353f4f6 SHA256 93388d2e6f6bdc08c6c44d2a53e8df7704da4e5fc69ef08365ccbd5c06fa8797
 DIST lucene-1.9.1-src.tar.gz 6135056 RMD160 35a65b9337adad253e740821a3bfe09126a2a711 SHA1 b3066cdf62022a25611d0c08b22f9d5d4856aea2 SHA256 a06bd64ce779f3d4e4b539c280f6a882efb2fd8cba4ebbed02a2b6f92658524f
-DIST lucene-2.3.1-src.tar.gz 4597493 RMD160 40d8c78e841a65948615ccdbfbde5c4373691e46 SHA1 b1d5b54d5a072f7b166f98cadb7541b47e10bcd5 SHA256 84ddee3a667242917c8117d9e273d9e81ef7f4015c69a7758f12b8018054e646
+DIST lucene-2.3.2-src.tar.gz 4602041 RMD160 89537777752d458b8b9c94b0add86b2dedeefcda SHA1 0088a7c521c1bcc4b218d52da72eabc43d2279c9 SHA256 d0cc4b8a40900bbb3243d2e9d9987e0ea0e7d359a2992222bc9acf296b208416
 EBUILD lucene-analyzers-1.9.1.ebuild 230 RMD160 3b744b54e34bf4030844d3a23cf121dd0fbbc459 SHA1 1491487cb0043c185d93cb06b76888bd6183ea93 SHA256 ad6c4af905c4ad93368ac37b551e144c000f9cbd36709aafdd6053d2e03ea426
-EBUILD lucene-analyzers-2.3.1.ebuild 225 RMD160 6af731314f39ffe30febbec0d3231e97a79210c8 SHA1 34b3453f53c29183dd994a7f644a7673cd1c4863 SHA256 72210a547a8ebdf3376ba630a17c5467dcbcba49e025c6591693f2f19cee22b2
-MISC ChangeLog 226 RMD160 a89e908a7f3b63f91f27b554fcc28d2e7c2f0039 SHA1 1c0edb7de8720afb3c1a8ccc6a1fccd70980f98d SHA256 2c9eed2d4dbd7b065b27acfc4b0e67875a1d908b24f9c3ce9462aa660eab9329
+EBUILD lucene-analyzers-2.3.2-r1.ebuild 412 RMD160 4e11b1bb669e4f020ba77f8dd1bf38f63dba2cda SHA1 cb6b0d02a59e63525705309bf40ed153d5cd21a7 SHA256 7362b0dbe2a8e4115d2d9aee3964e6809a9d87ef90609ab00bd6c11c445c0d4b
+MISC ChangeLog 522 RMD160 bf9d89fd63191afc2c9e4c999241110bd7b2b03f SHA1 991b2a823c911f65a29611e27b338eb7ef388806 SHA256 fc0bce01c04291440a1bb6dd4a2230fe3869720ab01f549beb824d61076adae6
 MISC metadata.xml 241 RMD160 9d44d74661eac7ec657f1cda526ab2f59d1915f9 SHA1 774467646d68a987c8811bec3c2249d5ae7bd29d SHA256 8538bec800c36fb559ab5746cee74d986fc5c7d1dbb72eb293401575b1a812c1
